# fastfilters2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml  fastfilters2.c  gen.cpp  pyproject.toml  setup.cfg  tasks.py
src/: fastfilters2.py
tests/: test_fastfilters2.py
