[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--doctest-continue-on-failure", "--benchmark-disable"]
testpaths = ["tests"]
python_functions = ["test_*", "bench_*"]

[tool.isort]
profile = "black"
