[metadata]
name = fastfilters2
author = Emil Melnikov
classifiers =
    Development Status :: 2 - Pre-Alpha
license = MIT
license_file = LICENSE
description = Image filters for computing feature maps
long_description = README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
